# fastcrud

./: .env  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
demo/: api.py  dependencies.py  main.py  router.py  schemas.py  settings.py
fastcrud/: core.py  dependencies.py  path.py  types.py  utils.py
fastcrud/storage/: __init__.py  aggregation.py  commun.py  local.py  mongodb.py  normalize.py
