[tool.poetry]
name = "fastcrud"
version = "0.1.0"
description = ""
authors = ["Sekou <sekou.omar.kone@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
python-rocksdb = "^0.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
isort = "^5.5.4"
black = "^20.8b1"
mypy = "^0.782"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
